v0.3.2/_sources/autoapi/pya/Aspec/index.rst.txt
:mod:`pya.Aspec`
================

.. py:module:: pya.Aspec


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   pya.Aspec.Aspec



.. data:: _LOGGER
   

   

.. py:class:: Aspec(x, sr=44100, label=None, cn=None)

   Audio spectrum class using rfft

   .. method:: to_sig(self)


      Convert Aspec into Asig


   .. method:: weight(self, weights, freqs=None, curve=1, kind='linear')


      TODO

      :param weights:
      :param freqs: (Default value = None)
      :param curve: (Default value = 1)
      :param kind: (Default value = 'linear')


   .. method:: plot(self, fn=np.abs, xlim=None, ylim=None, **kwargs)


      Plot spectrum

      :param fn: function for processing the rfft spectrum. (Default value = np.abs)
      :type fn: func
      :param xlim: Set x axis range (Default value = None)
      :type xlim: tuple or list or None
      :param ylim: Set y axis range (Default value = None)
      :type ylim: tuple or list or None
      :param \*\*kwargs: Keyword arguments for matplotlib.pyplot.plot()

      :returns: **_** -- self
      :rtype: Asig


   .. method:: __repr__(self)


      Return repr(self).



